# cubbitnet

./: .gitignore  .goreleaser.yaml  BUILD.bazel  README.md  WORKSPACE  flake.nix  go.mod  go.sum
.github/workflows/: ci.yml
bazel/: deps.bzl  prelude.bzl
examples/db/: BUILD.bazel  main.go
examples/grocksdb/: main.go
examples/simple/: BUILD.bazel  main.go
internal/codec/: BUILD.bazel  codec.go
internal/identity/: BUILD.bazel  identity.go
internal/utils/: BUILD.bazel  utils.go
patches/: grocksdb_add_liburing.patch  grocksdb_bindings.patch  grocksdb_buildfile.patch  grocksdb_move_bindings.patch  grocksdb_remove_clinkopts.patch  rules_nixpkgs_update_rules_nodejs.patch
pkg/db/: BUILD.bazel  db.go
pkg/message/: BUILD.bazel  message.go
pkg/node/: BUILD.bazel  node.go  node_test.go
pkg/transport/: BUILD.bazel  transport.go
scripts/: test.sh
test/: e2e_test.go
